documenting creating item delivery
